--- a/mods/creativecore.pw.toml
+++ b/mods/creativecore.pw.toml
@@ -1,13 +1,13 @@
 name = "CreativeCore"
-filename = "CreativeCore_FORGE_v2.10.32_mc1.20.1.jar"
+filename = "CreativeCore_FORGE_v2.10.34_mc1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/4eXUvr6G/CreativeCore_FORGE_v2.10.32_mc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/dEwpO45X/CreativeCore_FORGE_v2.10.34_mc1.20.1.jar"
 hash-format = "sha1"
-hash = "91f28bffa670d5d1176611bbfcc27d8c6d4f46a5"
+hash = "e45173de50bf94dbb9bb8f09112675df7e49e6bc"
 
 [update]
 [update.modrinth]
 mod-id = "OsZiaDHq"
-version = "4eXUvr6G"
+version = "dEwpO45X"
