--- a/mods/physicsmod.pw.toml
+++ b/mods/physicsmod.pw.toml
@@ -1,13 +1,13 @@
 name = "Physics Mod"
-filename = "physics-mod-3.0.5-mc-1.20-forge.jar"
+filename = "physics-mod-3.0.6-mc-1.20-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xy8aRQKS/versions/tkItFASG/physics-mod-3.0.5-mc-1.20-forge.jar"
+url = "https://cdn.modrinth.com/data/Xy8aRQKS/versions/4UHgsDwe/physics-mod-3.0.6-mc-1.20-forge.jar"
 hash-format = "sha1"
-hash = "43e5620f18e645c4bb70d7aefa0322f8d4f8a953"
+hash = "9dad2fc8694c68c3c86dce6c9fbe577ca0a9eb51"
 
 [update]
 [update.modrinth]
 mod-id = "Xy8aRQKS"
-version = "tkItFASG"
+version = "4UHgsDwe"
