--- a/mods/alternate-current.pw.toml
+++ b/mods/alternate-current.pw.toml
@@ -1,13 +1,13 @@
 name = "Alternate Current"
-filename = "alternate-current-mc1.20-1.7.0.jar"
+filename = "alternate_current-mc1.20-1.7.0.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/r0v8vy1s/versions/n5ziVH7a/alternate-current-mc1.20-1.7.0.jar"
+url = "https://cdn.modrinth.com/data/r0v8vy1s/versions/kC6SY4Zp/alternate_current-mc1.20-1.7.0.jar"
 hash-format = "sha1"
-hash = "0d6fe02c915c8f143b223616fed3d6a0071d3c42"
+hash = "02def44a2c416459ee5daecbe1caa6d78571e205"
 
 [update]
 [update.modrinth]
 mod-id = "r0v8vy1s"
-version = "n5ziVH7a"
+version = "kC6SY4Zp"
