--- a/mods/kotlin-for-forge.pw.toml
+++ b/mods/kotlin-for-forge.pw.toml
@@ -3,11 +3,11 @@ filename = "kotlinforforge-4.4.0-all.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ordsPcFz/versions/p2GXgSkh/kotlinforforge-4.4.0-all.jar"
 hash-format = "sha1"
 hash = "587b252c91c9bd802ff3fd5f2d576c9ddb663425"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "ordsPcFz"
-version = "p2GXgSkh"
+[update.curseforge]
+file-id = 4630525
+project-id = 351264
