--- a/mods/botarium.pw.toml
+++ b/mods/botarium.pw.toml
@@ -3,11 +3,11 @@ filename = "botarium-forge-1.20.1-2.2.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/2u6LRnMa/versions/sRN61sQh/botarium-forge-1.20.1-2.2.0.jar"
 hash-format = "sha1"
 hash = "6444145d4c89755c218d907a19177b72be9baa7f"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "2u6LRnMa"
-version = "sRN61sQh"
+[update.curseforge]
+file-id = 4672475
+project-id = 704113
