--- a/mods/patchouli.pw.toml
+++ b/mods/patchouli.pw.toml
@@ -3,11 +3,11 @@ filename = "Patchouli-1.20.1-81-FORGE.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nU0bVIaL/versions/YodpuIBJ/Patchouli-1.20.1-81-FORGE.jar"
 hash-format = "sha1"
 hash = "ac962914225ec045431b9c12618e296ca9cb3e22"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "nU0bVIaL"
-version = "YodpuIBJ"
+[update.curseforge]
+file-id = 4636277
+project-id = 306770
