--- a/mods/ad-astra.pw.toml
+++ b/mods/ad-astra.pw.toml
@@ -3,11 +3,11 @@ filename = "ad_astra-forge-1.20.1-1.15.3.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/3ufwT9JF/versions/9rCTue8e/ad_astra-forge-1.20.1-1.15.3.jar"
 hash-format = "sha1"
 hash = "6a0a99f549dfc3146a2bfffb941ebb3fe640339c"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4671593
-project-id = 635042
+[update.modrinth]
+mod-id = "3ufwT9JF"
+version = "9rCTue8e"
