--- a/mods/cc-tweaked.pw.toml
+++ b/mods/cc-tweaked.pw.toml
@@ -3,11 +3,11 @@ filename = "cc-tweaked-1.20.1-forge-1.107.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/BexXatKb/cc-tweaked-1.20.1-forge-1.107.0.jar"
 hash-format = "sha1"
 hash = "5ec02f31bd85880d2e0a11c59eff3ff19ddab945"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4702297
-project-id = 282001
+[update.modrinth]
+mod-id = "gu7yAYhd"
+version = "BexXatKb"
