--- a/mods/argonauts.pw.toml
+++ b/mods/argonauts.pw.toml
@@ -1,13 +1,13 @@
 name = "Argonauts"
-filename = "argonauts-forge-1.20.1-1.0.3.jar"
+filename = "argonauts-forge-1.20.1-1.0.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bb2EpKpx/versions/qaPDStz0/argonauts-forge-1.20.1-1.0.3.jar"
+url = "https://cdn.modrinth.com/data/bb2EpKpx/versions/DXR5wmcD/argonauts-forge-1.20.1-1.0.4.jar"
 hash-format = "sha1"
-hash = "9f1dcd2fd77debd4fab22e582b29207941b498f8"
+hash = "6ba3637539eadb91c54087e9d3909fd1f9db91a2"
 
 [update]
 [update.modrinth]
 mod-id = "bb2EpKpx"
-version = "qaPDStz0"
+version = "DXR5wmcD"
