--- a/mods/cc-tweaked.pw.toml
+++ b/mods/cc-tweaked.pw.toml
@@ -1,13 +1,13 @@
 name = "CC: Tweaked"
-filename = "cc-tweaked-1.20.1-forge-1.107.0.jar"
+filename = "cc-tweaked-1.20.1-forge-1.108.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/BexXatKb/cc-tweaked-1.20.1-forge-1.107.0.jar"
+url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/cbZwvViH/cc-tweaked-1.20.1-forge-1.108.0.jar"
 hash-format = "sha1"
-hash = "5ec02f31bd85880d2e0a11c59eff3ff19ddab945"
+hash = "570b3b269116fc38494609758dca60b278b61ba8"
 
 [update]
 [update.modrinth]
 mod-id = "gu7yAYhd"
-version = "BexXatKb"
+version = "cbZwvViH"
