--- a/mods/create-ore-excavation.pw.toml
+++ b/mods/create-ore-excavation.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Ore Excavation"
-filename = "createoreexcavation-1.20-1.3.0.jar"
+filename = "createoreexcavation-1.20-1.3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ResbpANg/versions/kB9UE2is/createoreexcavation-1.20-1.3.0.jar"
+url = "https://cdn.modrinth.com/data/ResbpANg/versions/dqBvEX2z/createoreexcavation-1.20-1.3.1.jar"
 hash-format = "sha1"
-hash = "0118c7163861d98ef78fe304bc2030cce2b1d809"
+hash = "d2d4f25eada7c96ff15bf7c818fcea01d19e489b"
 
 [update]
 [update.modrinth]
 mod-id = "ResbpANg"
-version = "kB9UE2is"
+version = "dqBvEX2z"
