--- a/mods/nyfs-spiders.pw.toml
+++ b/mods/nyfs-spiders.pw.toml
@@ -1,13 +1,13 @@
 name = "Nyf's Spiders"
-filename = "nyfsspiders-forge-1.20.1-2.1.0.jar"
+filename = "nyfsspiders-forge-1.20.1-2.1.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/dOGM7ccu/versions/wqZf325d/nyfsspiders-forge-1.20.1-2.1.0.jar"
+url = "https://cdn.modrinth.com/data/dOGM7ccu/versions/p98mV3Xm/nyfsspiders-forge-1.20.1-2.1.1.jar"
 hash-format = "sha1"
-hash = "4bc18d2fa6c030a284a888689b49703c1863f4c9"
+hash = "20783131cc63dec55036ffde84ed72c7e3c648c3"
 
 [update]
 [update.modrinth]
 mod-id = "dOGM7ccu"
-version = "wqZf325d"
+version = "p98mV3Xm"
