--- a/mods/carry-on.pw.toml
+++ b/mods/carry-on.pw.toml
@@ -1,13 +1,13 @@
 name = "Carry On"
-filename = "carryon-forge-1.20.1-2.1.0.1.jar"
+filename = "carryon-forge-1.20.1-2.1.2.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/joEfVgkn/versions/tofYc8B0/carryon-forge-1.20.1-2.1.0.1.jar"
+url = "https://cdn.modrinth.com/data/joEfVgkn/versions/e6FYVr4k/carryon-forge-1.20.1-2.1.2.5.jar"
 hash-format = "sha1"
-hash = "42803feda3e62916db5e3f734ecc9c6413123f62"
+hash = "bdef73b8a70d65b8383b34f60d03227c39840549"
 
 [update]
 [update.modrinth]
 mod-id = "joEfVgkn"
-version = "tofYc8B0"
+version = "e6FYVr4k"
