--- a/mods/curios.pw.toml
+++ b/mods/curios.pw.toml
@@ -1,13 +1,13 @@
 name = "Curios API (Forge)"
-filename = "curios-forge-5.2.0-beta.3+1.20.1.jar"
+filename = "curios-forge-5.2.0+1.20.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "6611016fed01842adb1d0ec7ec53bc00261b374d"
+hash = "4e3ec2bb51c5114535d6db6a7a8a590b95bbfbae"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4583413
+file-id = 4731891
 project-id = 309927
