--- a/mods/dynamiccrosshair.pw.toml
+++ b/mods/dynamiccrosshair.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic Crosshair"
-filename = "dynamiccrosshair-7.0.4+1.20-forge.jar"
+filename = "dynamiccrosshair-7.1+1.20-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/ZcR9weSm/versions/kV3gDaO6/dynamiccrosshair-7.0.4%2B1.20-forge.jar"
+url = "https://cdn.modrinth.com/data/ZcR9weSm/versions/hUj6v5bw/dynamiccrosshair-7.1%2B1.20-forge.jar"
 hash-format = "sha1"
-hash = "287936ba2885a3b36397e1bd71e1e0306cb1a593"
+hash = "92a24a95ea5ca41986c8a20dac074e4c5aeed74c"
 
 [update]
 [update.modrinth]
 mod-id = "ZcR9weSm"
-version = "kV3gDaO6"
+version = "hUj6v5bw"
