--- a/mods/ae2.pw.toml
+++ b/mods/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-forge-15.0.9-beta.jar"
+filename = "appliedenergistics2-forge-15.0.10.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/rLjoLUTF/appliedenergistics2-forge-15.0.9-beta.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/CkK2zzkf/appliedenergistics2-forge-15.0.10.jar"
 hash-format = "sha1"
-hash = "c0e6e66200d045096bff772cde59bdc41efc62e4"
+hash = "08c6cd62666634bbc9f7a120cf7ac40dc095f232"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "rLjoLUTF"
+version = "CkK2zzkf"
