--- a/mods/advancement-plaques.pw.toml
+++ b/mods/advancement-plaques.pw.toml
@@ -1,13 +1,13 @@
-name = "Advancement Plaques [Forge]"
+name = "Advancement Plaques"
 filename = "AdvancementPlaques-1.20.1-forge-1.4.10.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/9NM0dXub/versions/tim1GaS3/AdvancementPlaques-1.20.1-forge-1.4.10.jar"
 hash-format = "sha1"
 hash = "cf95c38fd083e5c3012b733b247f400fafb66447"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4650081
-project-id = 499826
+[update.modrinth]
+mod-id = "9NM0dXub"
+version = "tim1GaS3"
