--- a/mods/curios.pw.toml
+++ b/mods/curios.pw.toml
@@ -1,13 +1,13 @@
-name = "Curios API (Forge)"
-filename = "curios-forge-5.2.0-beta.3+1.20.1.jar"
+name = "Curios API"
+filename = "curios-forge-5.3.1+1.20.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/vvuO3ImH/versions/q9hLiOWr/curios-forge-5.3.1%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "6611016fed01842adb1d0ec7ec53bc00261b374d"
-mode = "metadata:curseforge"
+hash = "aeedb5cde80c15c81fb4513987f8f82b1d66c616"
 
 [update]
-[update.curseforge]
-file-id = 4583413
-project-id = 309927
+[update.modrinth]
+mod-id = "vvuO3ImH"
+version = "q9hLiOWr"
