--- a/mods/double-doors.pw.toml
+++ b/mods/double-doors.pw.toml
@@ -3,11 +3,11 @@ filename = "doubledoors-1.20.1-5.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/JrvR9OHr/versions/Ng9ISXia/doubledoors-1.20.1-5.0.jar"
 hash-format = "sha1"
 hash = "53d8930f5edcff869d8ae0cbeddf73ca81227eda"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4605226
-project-id = 348831
+[update.modrinth]
+mod-id = "JrvR9OHr"
+version = "Ng9ISXia"
