--- a/mods/balm.pw.toml
+++ b/mods/balm.pw.toml
@@ -1,13 +1,13 @@
-name = "Balm (Forge Edition)"
+name = "Balm"
 filename = "balm-forge-1.20-7.0.7.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/MBAkmtvl/versions/NRF4uKO7/balm-forge-1.20-7.0.7.jar"
 hash-format = "sha1"
-hash = "9345b52c0d82a450d0ad9bb3ec09d03225b3a028"
-mode = "metadata:curseforge"
+hash = "8280fe836f6ecfdd13716e71e38135dc4a5e4876"
 
 [update]
-[update.curseforge]
-file-id = 4670591
-project-id = 531761
+[update.modrinth]
+mod-id = "MBAkmtvl"
+version = "NRF4uKO7"
