--- a/mods/chance-cubes.pw.toml
+++ b/mods/chance-cubes.pw.toml
@@ -3,11 +3,11 @@ filename = "ChanceCubes-1.20.1-5.0.2.489.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/ur82ldLX/versions/DScgDf9c/ChanceCubes-1.20.1-5.0.2.489.jar"
 hash-format = "sha1"
 hash = "6a6fdfac7ff4d974913e118d654a07e854b34f10"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4713199
-project-id = 233113
+[update.modrinth]
+mod-id = "ur82ldLX"
+version = "DScgDf9c"
