--- a/mods/chunk-loaders.pw.toml
+++ b/mods/chunk-loaders.pw.toml
@@ -3,11 +3,11 @@ filename = "chunkloaders-1.2.7-forge-mc1.20.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/t1VgucWo/versions/UzRykJUh/chunkloaders-1.2.7-forge-mc1.20.jar"
 hash-format = "sha1"
 hash = "f0b7743d5a9a0211f4d8fb9b256ef52fc36358d1"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4710583
-project-id = 402924
+[update.modrinth]
+mod-id = "t1VgucWo"
+version = "UzRykJUh"
