--- a/mods/deeperdarker.pw.toml
+++ b/mods/deeperdarker.pw.toml
@@ -3,11 +3,11 @@ filename = "deeperdarker-forge-1.20.1-1.2.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/fnAffV0n/versions/bEomsNE8/deeperdarker-forge-1.20.1-1.2.0.jar"
 hash-format = "sha1"
 hash = "c2cc633ba30c49c2e9bc2d645acd418531b025da"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4715374
-project-id = 659011
+[update.modrinth]
+mod-id = "fnAffV0n"
+version = "bEomsNE8"
