--- a/mods/hammer-lib.pw.toml
+++ b/mods/hammer-lib.pw.toml
@@ -1,13 +1,13 @@
-name = "Hammer Lib"
+name = "HammerLib"
 filename = "HammerLib-1.20.1-20.1.12.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/PlkSuVtM/versions/iSU3Dxqh/HammerLib-1.20.1-20.1.12.jar"
 hash-format = "sha1"
 hash = "863fae548f3ef4e275f74db688efa1875eb58db9"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4623566
-project-id = 247401
+[update.modrinth]
+mod-id = "PlkSuVtM"
+version = "iSU3Dxqh"
