--- a/mods/kambrik.pw.toml
+++ b/mods/kambrik.pw.toml
@@ -3,11 +3,11 @@ filename = "Kambrik-6.1.1+1.20.1-forge.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/zfbCkvdZ/versions/er56DwLJ/Kambrik-6.1.1%2B1.20.1-forge.jar"
 hash-format = "sha1"
 hash = "48cdc22a0f6698c9059f437538e5546f74900541"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4654401
-project-id = 455585
+[update.modrinth]
+mod-id = "zfbCkvdZ"
+version = "er56DwLJ"
