--- a/mods/modonomicon.pw.toml
+++ b/mods/modonomicon.pw.toml
@@ -3,11 +3,11 @@ filename = "modonomicon-1.20.1-forge-1.39.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/692GClaE/versions/kgr2bDCg/modonomicon-1.20.1-forge-1.39.0.jar"
 hash-format = "sha1"
 hash = "dbc1c3dbf046fb6e87cf5f2e252941a0a6bd3e8d"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4675992
-project-id = 538392
+[update.modrinth]
+mod-id = "692GClaE"
+version = "kgr2bDCg"
