--- a/mods/mystical-agradditions.pw.toml
+++ b/mods/mystical-agradditions.pw.toml
@@ -3,11 +3,11 @@ filename = "MysticalAgradditions-1.20.1-7.0.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/pl0jGXIx/versions/F1wYXVBL/MysticalAgradditions-1.20.1-7.0.1.jar"
 hash-format = "sha1"
 hash = "ce19d90a9768819fa84be60576ca0eaebfe656f4"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4671777
-project-id = 256247
+[update.modrinth]
+mod-id = "pl0jGXIx"
+version = "F1wYXVBL"
