--- a/mods/mystical-agriculture.pw.toml
+++ b/mods/mystical-agriculture.pw.toml
@@ -1,13 +1,13 @@
 name = "Mystical Agriculture"
-filename = "MysticalAgriculture-1.20.1-7.0.2.jar"
+filename = "MysticalAgriculture-1.20.1-7.0.3.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/C95ReXie/versions/pMaM6bS4/MysticalAgriculture-1.20.1-7.0.3.jar"
 hash-format = "sha1"
-hash = "79884c374598dbb9a114aeee1f13e85d9cfa8733"
-mode = "metadata:curseforge"
+hash = "239a4f9916bbde70deb03e674b9d418e3ba046e2"
 
 [update]
-[update.curseforge]
-file-id = 4671825
-project-id = 246640
+[update.modrinth]
+mod-id = "C95ReXie"
+version = "pMaM6bS4"
