--- a/mods/occultism.pw.toml
+++ b/mods/occultism.pw.toml
@@ -1,13 +1,13 @@
 name = "Occultism"
-filename = "occultism-1.20.1-1.87.0.jar"
+filename = "occultism-1.20.1-1.87.2.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/sbJh4AZw/versions/MQOdpa49/occultism-1.20.1-1.87.2.jar"
 hash-format = "sha1"
-hash = "a4956277a885183aa31a217c44708dfd1a47a47a"
-mode = "metadata:curseforge"
+hash = "1b015ce15b52d39c5a8d169bd1e08220a423a691"
 
 [update]
-[update.curseforge]
-file-id = 4729079
-project-id = 361026
+[update.modrinth]
+mod-id = "sbJh4AZw"
+version = "MQOdpa49"
