--- a/mods/realistic-bees.pw.toml
+++ b/mods/realistic-bees.pw.toml
@@ -3,11 +3,11 @@ filename = "realisticbees-1.20.1-3.4.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/tG6HkcWx/versions/CUsIpAFd/realisticbees-1.20.1-3.4.jar"
 hash-format = "sha1"
 hash = "973c327e3338559c394d5367a2dfc6ae15a4191f"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4583532
-project-id = 410743
+[update.modrinth]
+mod-id = "tG6HkcWx"
+version = "CUsIpAFd"
