--- a/mods/simple-hats.pw.toml
+++ b/mods/simple-hats.pw.toml
@@ -3,11 +3,11 @@ filename = "simplehats-forge-1.20.1-0.2.2.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/iSkQCp6b/versions/DuWbl10x/simplehats-forge-1.20.1-0.2.2.jar"
 hash-format = "sha1"
 hash = "c21f3c9f05a19e2f6270109e12547f0b75a05c3e"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4735722
-project-id = 631990
+[update.modrinth]
+mod-id = "iSkQCp6b"
+version = "DuWbl10x"
