--- a/mods/smartbrainlib.pw.toml
+++ b/mods/smartbrainlib.pw.toml
@@ -1,13 +1,13 @@
-name = "SmartBrainLib (Forge/Fabric/Quilt)"
+name = "SmartBrainLib"
 filename = "SmartBrainLib-forge-1.20-1.11.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/PuyPazRT/versions/mAriNnAC/SmartBrainLib-forge-1.20-1.11.jar"
 hash-format = "sha1"
-hash = "44646b0bec72414786a16aba7de4bc384ba572d9"
-mode = "metadata:curseforge"
+hash = "8d41f05f19b7e2fe12081286065e707ba8e5a57e"
 
 [update]
-[update.curseforge]
-file-id = 4575423
-project-id = 661293
+[update.modrinth]
+mod-id = "PuyPazRT"
+version = "mAriNnAC"
